--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+* {
+  box-sizing: border-box;
+}
+@layer components {
+  .btn-primary {
+    @apply bg-gray-900 text-gray-50 py-[6px] px-4 rounded-xl font-[500];
+  }
+}
